--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,8 @@
 
 
     <fragment
-        android:name="com.wangqiang.pro.eventlite.MainFragment"
+        android:id="@+id/mainf"
+        class="com.wangqiang.pro.eventlite.MainFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
